kubernetes/dubbo-provider-nodejs.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: e2e-dubbo-provider
    ver: v3
  name: e2e-dubbo-provider-v3
  namespace: e2e-dubbo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: e2e-dubbo-provider
  template:
    metadata:
      labels:
        app: e2e-dubbo-provider
        ver: v3
      name: e2e-dubbo-provider-v3
      namespace: e2e-dubbo
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: network
                operator: DoesNotExist
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app
                  operator: In
                  values:
                  - e2e-dubbo-provider
              topologyKey: kubernetes.io/hostname
            weight: 100
      tolerations:
      - effect: NoSchedule
        key: istio
        operator: Exists
      containers:
      - name: dubbo-provider-nodejs
        image: docker.io/gxcsoccer/e2e-dubbo-provider-nodejs
        imagePullPolicy: Always
        name: app
